--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "tmc-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "tmc-ui.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^3.4.4",
